--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
   </head>
   <body>
     <header class="main-header">
-      <h2 class="visually-hidden">DEVICE</h2>
-      <img src="img/logo.png" width="164" height="36" alt="">
+      <img src="img/logo.png" width="164" height="36" alt="логотип интернет-магазина DEVICE">
       <form class="header-search" method="post" action="https://echo.htmlacademy.ru">
-        <label>
-          <span class="visually-hidden">Поиск по сайту</span>
-          <input class="header-search" type="text" value="" placeholder="Поиск по сайту">
-        </label>
+        <input class="header-search" type="text"  aria-label="Поиск по сайту" value="" placeholder="Поиск по сайту">
         <button class="button" type="submit">Найти</button>
       </form>
       <ul class="user-navigation">
@@ -268,15 +264,14 @@
         <section class="contacts">
           <h3>Контакты</h3>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает. </p>
-          <a href="#"><img src="img/map.jpg" width="560" height="222" alt="изображение мини карты"></a>
+          <a href="#"><img src="img/map.jpg" width="560" height="222" alt="Наш адрес: г. Москва, ул. Строителей, 15"></a>
           <a class="popap-btn" href="#">Напишите нам</a>
         </section>
       </section>
     </main>
     
     <footer class="main-footer">
-      <h2 class="visually-hidden">DEVICE</h2>
-      <img src="img/logo-footer.png" width="164" height="36" alt="">
+      <img src="img/logo-footer.png" width="164" height="36" alt="логотип интернет-магазина DEVICE">
       <ul class="footer--user-navigation">
         <li class="login-link">
           <a href="login.html">Войти</a>
