--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <header class="main-header">
-      <img class="logo-wrapper" src="img/logo.png" width="164" height="36" alt="логотип интернет-магазина DEVICE">
+      <a class="logo-link" href="#"><img class="logo-wrapper" src="img/logo.png" width="164" height="36" alt="логотип интернет-магазина DEVICE"></a>
       <div class="container">
         <div class="wrapper">
           <form class="header-searching" method="post" action="https://echo.htmlacademy.ru">
