--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styleminimize.css" rel="stylesheet">
   </head>
 
   <body>
@@ -44,8 +44,8 @@
             <li>
               <a  class="header-link login-link--enter" href="profile.html">Валентин Петухов</a>
             </li>
-            <li class="logout-link">
-              <a class="login-link-exit" href="logout.html">Выйти</a>
+            <li>
+              <a class="header-link" href="logout.html">Выйти</a>
 		        </li>
             <li>
               <ul class="shopping-navigation wrapper liststyle-reset">
@@ -260,7 +260,7 @@
                     <span class="link-text">Валентин Петухов</span>
                   </a>
                 </li>
-                <li class="logout-link">
+                <li>
                   <a class="footer-link footer-link-exit" href="#">Выйти</a>
                 </li>
               </ul>
@@ -319,44 +319,5 @@
         </div>
       </div>
     </footer>
-    
-<!--    <footer class="main-footer">
-      <div class="container">
-        <div class="wrapper">
-          <img class="footer-logo" src="img/logo-footer.png" width="164" height="36" alt="логотип интернет-магазина DEVICE">
-          <p class="location">г. Москва, ул. Строителей, 15</p>
-        </div>
-        <div class="wrapper">
-          <ul class="footer--service-navigation liststyle-reset">
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="footer-social liststyle-reset">
-            <li><a class="social-button" href="#"><img src="img/fb-ico.svg" width="33" height="33" alt="Facebook"></a></li>
-           <li><a class="social-button" href="#"><img src="img/instagram-ico.svg" width="33" height="33" alt="Instagram"></a></li>
-           <li><a class="social-button" href="#"><img src="img/twitter-ico.svg" width="33" height="33" alt="Twitter"></a></li>
-          </ul>
-        </div>
-        <div class="wrapper">
-          <ul class="footer--visitor-navigation liststyle-reset">
-            <li class="footer-login">
-              <ul class="footer--user-navigation liststyle-reset">
-                <li class="login-link">
-                  <a href="profile.html">Валентин Петухов</a>
-                </li>
-                <li class="logout-link">
-                  <a class="footer-link-exit" href="#">Выйти</a>
-                </li>
-              </ul>
-            </li>
-            <li class="collate"><a href="#">Сравнить</a></li>
-            <li class="shopping-cart"><a href="#">Корзина</a></li>
-          </ul>
-          <a class="phone-number" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
-          <a class="creator-btn" href="https://htmlacademy.ru"><img src="img/academy-ico.svg" width="28" height="35" alt="HTML Academy"></a>
-        </div>
-      </div>
-    </footer>-->
   </body>
 </html>
