--- a/catalog.html
+++ b/catalog.html
@@ -12,15 +12,12 @@
       <a class="logo-link" href="index.html"><img class="logo-wrapper" src="img/logo.png" width="164" height="36" alt="логотип интернет-магазина DEVICE"></a>
       <div class="container">
         <div class="wrapper">
-          <form class="header-searching" method="post" action="https://echo.htmlacademy.ru">
-            <label class="searching-wrapper">
-              <input class="header-search" type="text"  aria-label="Поиск по сайту" value="" placeholder="Поиск по сайту">
-              <button class="button-search" type="submit">Найти</button>
-            </label>
+          <form class="header-searching searching-wrapper" method="post" action="https://echo.htmlacademy.ru">
+            <input class="header-search" type="text" name="search-input" value="" placeholder="Поиск по сайту">
+            <button class="button-search" type="submit">Найти</button>
           </form>
-          <label class="catalog-products">
+          <div class="catalog-products">
             <span class="catalog-head">Каталог товаров</span>
-            <input class="visually-hidden catalog-products-button" type="checkbox" id="catalog-button">
             <div class="catalog-wrapper">
               <ul class="catalog-category liststyle-reset">
                 <li><a class="header-link" href="catalog.html">Виртуальная реальность</a></li>
@@ -37,7 +34,7 @@
                 <li><a class="header-link" href="catalog.html">Квадрокоптеры</a></li>
               </ul>
             </div>
-          </label>
+          </div>
         </div>
         <div class="wrapper">
           <ul class="visitor-navigation liststyle-reset">
@@ -319,5 +316,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/scriptminimaze.js"></script>
   </body>
 </html>
